--- a/forge/src/main/resources/META-INF/mods.toml
+++ b/forge/src/main/resources/META-INF/mods.toml
@@ -1,17 +1,18 @@
 modLoader = "kotlinforforge"
 loaderVersion = "[4,)"
-#issueTrackerURL = ""
+issueTrackerURL = "https://github.com/TechTastic/hexsky/issues"
+displayURL = "https://techtastic.github.io/hexsky/v/latest/master/en_us/"
 license = "MIT"
 
 [[mods]]
 modId = "hexxyskies"
 version = "${version}"
 displayName = "Hexxy Skies"
-authors = "Me!"
+authors = ["TechTastic", "walksanator"]
 description = '''
-This is an example description! Tell everyone what your mod is about!
+Hexcasting x Valkyrien Skies Interop
 '''
-#logoFile = ""
+logoFile = "icon.png"
 
 [[dependencies.hexxyskies]]
 modId = "forge"
@@ -31,5 +32,54 @@ side = "BOTH"
 modId = "architectury"
 mandatory = true
 versionRange = "[9.2.14,)"
+ordering = "AFTER"
+side = "BOTH"
+
+[[dependencies.hexxyskies]]
+modId = "valkyrienskies"
+mandatory = true
+versionRange = "[2.4.0,)"
+ordering = "AFTER"
+side = "BOTH"
+
+[[dependencies.hexxyskies]]
+modId = "hexcasting"
+mandatory = true
+versionRange = "[0.11.3,)"
+ordering = "AFTER"
+side = "BOTH"
+
+[[dependencies.hexxyskies]]
+modId = "moreiotas"
+mandatory = false
+versionRange = "[0.1.1,)"
+ordering = "AFTER"
+side = "BOTH"
+
+[[dependencies.hexxyskies]]
+modId = "complexhex"
+mandatory = false
+versionRange = "[0.1.3,)"
+ordering = "AFTER"
+side = "BOTH"
+
+[[dependencies.hexxyskies]]
+modId = "hexal"
+mandatory = false
+versionRange = "[0.3.1,)"
+ordering = "AFTER"
+side = "BOTH"
+
+[[dependencies.hexxyskies]]
+modId = "hexodus"
+mandatory = false
+versionRange = "[1.0.0,)"
+ordering = "AFTER"
+side = "BOTH"
+
+[[dependencies.hexxyskies]]
+modId = "hexical"
+mandatory = false
+versionRange = "[2.0.0,)"
 ordering = "AFTER"
 side = "BOTH"
