--- a/.copier-answers.hexdoc-mod.yml
+++ b/.copier-answers.hexdoc-mod.yml
@@ -2,13 +2,13 @@
 # See: https://copier.readthedocs.io/en/stable/configuring/#the-copier-answersyml-file
 _commit: v0.1.6
 _src_path: gh:hexdoc-dev/hexdoc-mod-template
-add_gitignore: true
+add_gitignore: false
 add_vscode: false
 advanced: true
 author: TechTastic
 base_book_url: https://techtastic.github.io/HexxySkies/
-book_id: hexxyskies:book
-capitalize_platforms: true
+book_id: hexcasting:thehexbook
+capitalize_platforms: false
 default_branch: master
 github_repo: HexxySkies
 gradle_minecraft_version_key: minecraft_version
