--- a/doc/hexdoc.toml
+++ b/doc/hexdoc.toml
@@ -14,6 +14,7 @@ resource_dirs = [  # top takes priority
     "{$_forge.src}/main/resources",
     { path="{$_forge.src}/generated/resources", required=false },
     # other hexdoc plugins
+    { modid="hexcasting" },
     { modid="minecraft" },
     { modid="hexdoc" },
 ]
@@ -23,6 +24,7 @@ export_dir = "src/hexdoc_hexxyskies/_export/generated"
 icon = "icon.png"
 include = [
     "hexxyskies",
+    "hexcasting",
     "hexdoc",
 ]
 
