--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -77,9 +77,11 @@ jobs:
         run: ./gradlew build
 
       - name: Publish mod
+        if: ${{ inputs.publish }} == 'true'
         run: ./gradlew forge:publishMods fabric:publishMods
 
       - name: Login to Azure
+        if: ${{ inputs.publish }} == 'true'
         uses: azure/login@v2
         with:
           client-id: ${{ secrets.AZURE_CLIENT_ID }}
@@ -87,6 +89,7 @@ jobs:
           subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
       - name: Get Azure access token
+        if: ${{ inputs.publish }} == 'true'
         id: get-token
         run: |
           token=$(az account get-access-token --query accessToken --resource 499b84ac-1321-427f-aa17-267ca6975798 --output tsv)
@@ -94,6 +97,7 @@ jobs:
           echo "token=$token" >> "$GITHUB_OUTPUT"
 
       - name: Publish to ${{ inputs.dry_run && 'Maven Local' || 'Maven' }}
+        if: ${{ inputs.publish }} == 'true'
         env:
           MAVEN_PASSWORD: ${{ steps.get-token.outputs.token }}
         run: ./gradlew ${{ inputs.dry_run && 'publishToMavenLocal' || 'publish' }}
