Moved Greater Teleport mixins to base VS
Removed `OpShipGetSlug` for a Mixin into `OPNameGet` from MoreIotas

--- a/doc/hexdoc.toml
+++ b/doc/hexdoc.toml
@@ -25,6 +25,7 @@ export_dir = "src/hexdoc_hexxyskies/_export/generated"
 icon = "icon.png"
 include = [
     "hexxyskies",
+    "moreiotas",
     "hexodus",
     "hexcasting",
     "hexdoc",
