--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -95,7 +95,10 @@ processResources {
     inputs.property 'version', project.version
 
     filesMatching('META-INF/mods.toml') {
-        expand version: inputs.properties.version
+        expand version: inputs.properties.version, hexcasting_version: hexcasting_version, moreiotas_version: moreiotas_version,
+        hexal_version: hexal_version, hexodus_version: hexodus_version, architectury_api_version: architectury_api_version,
+        complexhex_version: (complexhex_version.contains("-") ? complexhex_version.substring(0, complexhex_version.indexOf("-")) : complexhex_version),
+        vs2_version: (vs2_version.contains("+") ? vs2_version.substring(0, vs2_version.indexOf("+")) : vs2_version), hexical_version: hexical_version
     }
 }
 
