--- a/forge/src/main/resources/META-INF/mods.toml
+++ b/forge/src/main/resources/META-INF/mods.toml
@@ -31,55 +31,55 @@ side = "BOTH"
 [[dependencies.hexxyskies]]
 modId = "architectury"
 mandatory = true
-versionRange = "[9.2.14,)"
+versionRange = "[${architectury_api_version},)"
 ordering = "AFTER"
 side = "BOTH"
 
 [[dependencies.hexxyskies]]
 modId = "valkyrienskies"
 mandatory = true
-versionRange = "[2.4.0,)"
+versionRange = "[${vs2_version},)"
 ordering = "AFTER"
 side = "BOTH"
 
 [[dependencies.hexxyskies]]
 modId = "hexcasting"
 mandatory = true
-versionRange = "[0.11.2,)"
+versionRange = "[${hexcasting_version},)"
 ordering = "AFTER"
 side = "BOTH"
 
 [[dependencies.hexxyskies]]
 modId = "moreiotas"
 mandatory = false
-versionRange = "[0.1.1,)"
+versionRange = "[${moreiotas_version},)"
 ordering = "AFTER"
 side = "BOTH"
 
 [[dependencies.hexxyskies]]
 modId = "complexhex"
 mandatory = false
-versionRange = "[0.1.3,)"
+versionRange = "[${complexhex_version},)"
 ordering = "AFTER"
 side = "BOTH"
 
 [[dependencies.hexxyskies]]
 modId = "hexal"
 mandatory = false
-versionRange = "[0.3.1,)"
+versionRange = "[${hexal_version},)"
 ordering = "AFTER"
 side = "BOTH"
 
 [[dependencies.hexxyskies]]
 modId = "hexodus"
 mandatory = false
-versionRange = "[1.0.0,)"
+versionRange = "[${hexodus_version},)"
 ordering = "AFTER"
 side = "BOTH"
 
 [[dependencies.hexxyskies]]
 modId = "hexical"
 mandatory = false
-versionRange = "[2.0.0,)"
+versionRange = "[${hexical_version},)"
 ordering = "AFTER"
 side = "BOTH"
