--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,8 +3,12 @@ name: Release new version
 on:
   workflow_dispatch:
     inputs:
-      publish:
-        description: Release this version
+      publish-mod:
+        description: Publish to CurseForge and Modrinth
+        type: boolean
+        default: false
+      publish-maven:
+        description: Publish to Hexxy Media Maven
         type: boolean
         default: false
       publish-pypi:
@@ -53,14 +57,10 @@ jobs:
       - name: Publish to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
 
-  publish:
+  build-mod:
     runs-on: ubuntu-latest
-    if: inputs.publish
-    environment:
-      name: publishing
     permissions:
       contents: read
-      id-token: write
     steps:
       - uses: actions/checkout@v4
 
@@ -76,24 +76,38 @@ jobs:
       - name: Build mod
         run: ./gradlew build
 
+
+  publish:
+    runs-on: ubuntu-latest
+    needs: build-mod
+    environment:
+      name: publishing
+    permissions:
+      contents: read
+      id-token: write
+    steps:
       - name: Publish mod
+        if: inputs.publish-mod
         run: ./gradlew forge:publishMods fabric:publishMods
 
-      - name: Login to Azure
-        uses: azure/login@v2
-        with:
-          client-id: ${{ secrets.AZURE_CLIENT_ID }}
-          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-
-      - name: Get Azure access token
-        id: get-token
-        run: |
-          token=$(az account get-access-token --query accessToken --resource 499b84ac-1321-427f-aa17-267ca6975798 --output tsv)
-          echo "::add-mask::$token"
-          echo "token=$token" >> "$GITHUB_OUTPUT"
-
-      - name: Publish to ${{ inputs.dry_run && 'Maven Local' || 'Maven' }}
-        env:
-          MAVEN_PASSWORD: ${{ steps.get-token.outputs.token }}
-        run: ./gradlew ${{ inputs.dry_run && 'publishToMavenLocal' || 'publish' }}
+#      - name: Login to Azure
+#        if: inputs.publish-maven
+#        uses: azure/login@v2
+#        with:
+#          client-id: ${{ secrets.AZURE_CLIENT_ID }}
+#          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+#          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+#
+#      - name: Get Azure access token
+#        if: inputs.publish-maven
+#        id: get-token
+#        run: |
+#          token=$(az account get-access-token --query accessToken --resource 499b84ac-1321-427f-aa17-267ca6975798 --output tsv)
+#          echo "::add-mask::$token"
+#          echo "token=$token" >> "$GITHUB_OUTPUT"
+#
+#      - name: Publish to ${{ inputs.dry_run && 'Maven Local' || 'Maven' }}
+#        if: inputs.publish-maven
+#        env:
+#          MAVEN_PASSWORD: ${{ steps.get-token.outputs.token }}
+#        run: ./gradlew ${{ inputs.dry_run && 'publishToMavenLocal' || 'publish' }}
