--- a/common/build.gradle
+++ b/common/build.gradle
@@ -50,8 +50,9 @@ dependencies {
     modCompileOnly("maven.modrinth:complex-hex:$complexhex_version")
     modCompileOnly("curse.maven:hexstructuction-1283004:$hexstruction_version")
     modCompileOnly("ram.talia.hexal:hexal-common-$minecraft_version:$hexal_version") { transitive = false }
-    modCompileOnly files("${rootProject.rootDir}/libs/hexical-2.0.0-e0d7ef9.jar")
+    compileOnly files("${rootProject.rootDir}/libs/hexical-2.0.0-e0d7ef9.jar")
     modCompileOnly("maven.modrinth:hexodus:$hexodus_version")
     modCompileOnly("com.github.qouteall:GravityChanger:v$gravity_changer_version-mc$minecraft_version") { transitive = false }
     modCompileOnly "dev.onyxstudios.cardinal-components-api:cardinal-components-api:$cca_version"
+    modCompileOnly files("${rootProject.rootDir}/libs/lapisworks-1.5.8-beta.3.jar")
 }
