--- a/gradle.properties
+++ b/gradle.properties
@@ -25,6 +25,7 @@ paucal_version = 0.6.0-pre-118
 patchouli_version = 84
 inline_version = 1.0.1
 cloth_config_version = 11.1.118
+inline_latex_version = 1.0.0
 
 moreiotas_version = 0.1.1
 complexhex_version = 0.1.3-beta
